--- a/test_subgraphs.ipynb
+++ b/test_subgraphs.ipynb
@@ -11,12 +11,27 @@
      "output_type": "stream",
      "text": [
       "── live stream with subgraphs=True ──\n",
-      "Intermediate state - (('root:fe2d13d0-19aa-30bd-7299-f029befeeea0',), 'messages', (AIMessage(content='🗣️ Hello from the *main* node!', additional_kwargs={}, response_metadata={}, id='f307d93c-219c-41f7-9323-a167cfe652fe'), {'thread_id': 'demo', 'langgraph_step': 1, 'langgraph_node': 'root', 'langgraph_triggers': ('branch:to:root',), 'langgraph_path': ('__pregel_pull', 'root'), 'langgraph_checkpoint_ns': 'root:fe2d13d0-19aa-30bd-7299-f029befeeea0'}))\n",
+      "\n",
+      "Intermediate state - (('root:b06586fb-0d63-c8f6-1788-7b34edcd06d0',), 'messages', (AIMessage(content='🗣️ Hello from the *main* node!', additional_kwargs={}, response_metadata={}, id='3dab8cc5-fde6-4781-96c7-28962bdae795'), {'thread_id': 'demo', 'langgraph_step': 1, 'langgraph_node': 'root', 'langgraph_triggers': ('branch:to:root',), 'langgraph_path': ('__pregel_pull', 'root'), 'langgraph_checkpoint_ns': 'root:b06586fb-0d63-c8f6-1788-7b34edcd06d0'}))\n",
+      "\n",
+      "\n",
       "Global state: {'messages': [], 'current_phase': '', 'phase_complete': False}\n",
-      "Intermediate state - (('analysis_subgraph:3ed0c3ce-13ac-cced-e4e0-b5002adb2642', 'child:67dc9201-c4fb-fd03-58bc-81fd5546f77c'), 'messages', (AIMessage(content='👋 Hi from inside the *first* sub-graph!', additional_kwargs={}, response_metadata={}, id='1bf6c391-8d67-410d-8c68-500500d6d8e5'), {'thread_id': 'demo', 'langgraph_step': 1, 'langgraph_node': 'child', 'langgraph_triggers': ('branch:to:child',), 'langgraph_path': ('__pregel_pull', 'child'), 'langgraph_checkpoint_ns': 'analysis_subgraph:3ed0c3ce-13ac-cced-e4e0-b5002adb2642|child:67dc9201-c4fb-fd03-58bc-81fd5546f77c', 'checkpoint_ns': 'analysis_subgraph:3ed0c3ce-13ac-cced-e4e0-b5002adb2642'}))\n",
-      "Global state: {'messages': [AIMessage(content='🗣️ Hello from the *main* node!', additional_kwargs={}, response_metadata={}, id='f307d93c-219c-41f7-9323-a167cfe652fe')], 'current_phase': 'root_phase', 'phase_complete': True}\n",
-      "Intermediate state - (('extra_subgraph:5944b8a8-228c-2ce8-28c7-a0a16063ef92', 'extra_child:66c6ea0d-4731-5eb7-6475-2f028fb38ff9'), 'messages', (AIMessage(content='🚀 Greetings from the *second* sub-graph!', additional_kwargs={}, response_metadata={}, id='77dd63d1-0e45-4470-a940-d7fd01e28cce'), {'thread_id': 'demo', 'langgraph_step': 1, 'langgraph_node': 'extra_child', 'langgraph_triggers': ('branch:to:extra_child',), 'langgraph_path': ('__pregel_pull', 'extra_child'), 'langgraph_checkpoint_ns': 'extra_subgraph:5944b8a8-228c-2ce8-28c7-a0a16063ef92|extra_child:66c6ea0d-4731-5eb7-6475-2f028fb38ff9', 'checkpoint_ns': 'extra_subgraph:5944b8a8-228c-2ce8-28c7-a0a16063ef92'}))\n",
-      "Global state: {'messages': [AIMessage(content='🗣️ Hello from the *main* node!', additional_kwargs={}, response_metadata={}, id='f307d93c-219c-41f7-9323-a167cfe652fe'), AIMessage(content='👋 Hi from inside the *first* sub-graph!', additional_kwargs={}, response_metadata={}, id='1bf6c391-8d67-410d-8c68-500500d6d8e5')], 'current_phase': 'child_phase', 'phase_complete': True}\n",
+      "\n",
+      "********************\n",
+      "\n",
+      "Intermediate state - (('analysis_subgraph:fa217a91-23e5-c752-62ba-d161b1d65899', 'child:c5417f14-7ddd-e4c4-28da-3a39e020c644'), 'messages', (AIMessage(content='👋 Hi from inside the *first* sub-graph!', additional_kwargs={}, response_metadata={}, id='9403dd23-7a40-4abd-8850-fb45a2bff0f0'), {'thread_id': 'demo', 'langgraph_step': 1, 'langgraph_node': 'child', 'langgraph_triggers': ('branch:to:child',), 'langgraph_path': ('__pregel_pull', 'child'), 'langgraph_checkpoint_ns': 'analysis_subgraph:fa217a91-23e5-c752-62ba-d161b1d65899|child:c5417f14-7ddd-e4c4-28da-3a39e020c644', 'checkpoint_ns': 'analysis_subgraph:fa217a91-23e5-c752-62ba-d161b1d65899'}))\n",
+      "\n",
+      "\n",
+      "Global state: {'messages': [AIMessage(content='🗣️ Hello from the *main* node!', additional_kwargs={}, response_metadata={}, id='3dab8cc5-fde6-4781-96c7-28962bdae795')], 'current_phase': 'root_phase', 'phase_complete': True}\n",
+      "\n",
+      "********************\n",
+      "\n",
+      "Intermediate state - (('extra_subgraph:9ca973d2-3aef-707f-92a8-206b93f03032', 'extra_child:bd102f42-fc36-130c-3033-f0f9eff8849c'), 'messages', (AIMessage(content='🚀 Greetings from the *second* sub-graph!', additional_kwargs={}, response_metadata={}, id='33d46748-6ce5-4a0e-ad2e-2991525f5766'), {'thread_id': 'demo', 'langgraph_step': 1, 'langgraph_node': 'extra_child', 'langgraph_triggers': ('branch:to:extra_child',), 'langgraph_path': ('__pregel_pull', 'extra_child'), 'langgraph_checkpoint_ns': 'extra_subgraph:9ca973d2-3aef-707f-92a8-206b93f03032|extra_child:bd102f42-fc36-130c-3033-f0f9eff8849c', 'checkpoint_ns': 'extra_subgraph:9ca973d2-3aef-707f-92a8-206b93f03032'}))\n",
+      "\n",
+      "\n",
+      "Global state: {'messages': [AIMessage(content='🗣️ Hello from the *main* node!', additional_kwargs={}, response_metadata={}, id='3dab8cc5-fde6-4781-96c7-28962bdae795'), AIMessage(content='👋 Hi from inside the *first* sub-graph!', additional_kwargs={}, response_metadata={}, id='9403dd23-7a40-4abd-8850-fb45a2bff0f0')], 'current_phase': 'child_phase', 'phase_complete': True}\n",
+      "\n",
+      "********************\n",
       "\n",
       "── final merged state ──\n",
       "ai: 🗣️ Hello from the *main* node!\n",
@@ -121,6 +136,7 @@
     "\n",
     "        print(f'\\nIntermediate state - {chunk}\\n')\n",
     "        print(f'\\nGlobal state: {state}\\n')\n",
+    "        print('*' * 20)\n",
     "\n",
     "print(\"\\n── final merged state ──\")\n",
     "final_state = graph.invoke(init_state, config)\n",
