--- a/recession_debate.ipynb
+++ b/recession_debate.ipynb
@@ -111,7 +111,7 @@
     "    \"gpt5_high\": LLM(\"openai\", \"gpt-5.2\", reasoning=\"high\", verbosity=\"medium\"),\n",
     "    \"gpt5_medium\": LLM(\"openai\", \"gpt-5.2\", reasoning=\"medium\", verbosity=\"high\"),\n",
     "    \"gpt5_fast\": LLM(\"openai\", \"gpt-5.2\", reasoning=\"none\", verbosity=\"low\"),\n",
-    "    \"opus\": LLM(\"anthropic\", \"claude-opus-4-20250514\"),\n",
+    "    \"opus\": LLM(\"anthropic\", \"claude-opus-4-5\"),\n",
     "}\n",
     "\n",
     "\n",
